# Helix-vault

./: .gitattributes  .rustup_version  README.md  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  _GoogoleAuth_Failure_bak.tsx
src-tauri/: .gitignore  Cargo.toml  Microsoft.WebView2.FixedVersionRuntime.137.0.3296.83.x64.cab  tauri.conf.json
src-tauri/Microsoft.WebView2.FixedVersionRuntime.137.0.3296.83.x64/: 137.0.3296.83.manifest  msedge.dll.sig  msedge_100_percent.pak  msedge_200_percent.pak  msedgewebview2.exe.sig
src-tauri/Microsoft.WebView2.FixedVersionRuntime.137.0.3296.83.x64/Locales/: af.pak  am.pak  ar.pak  as.pak  az.pak  bg.pak  bn-IN.pak  bs.pak  ca-Es-VALENCIA.pak  ca.pak  cs.pak  cy.pak  da.pak  de.pak  el.pak  en-GB.pak  en-US.pak  es-419.pak  es.pak  et.pak  eu.pak  fa.pak  fi.pak  fil.pak  fr-CA.pak  fr.pak  ga.pak  gd.pak  gl.pak  gu.pak  he.pak  hi.pak  hr.pak  hu.pak  id.pak  is.pak  it.pak  ja.pak  ka.pak  kk.pak  (+44 more)
src-tauri/Microsoft.WebView2.FixedVersionRuntime.137.0.3296.83.x64/WidevineCdm/_platform_specific/win_x64/: widevinecdm.dll.sig
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: backup.rs  google_auth.rs  mod.rs  restore.rs  settings.rs
src/backup/: page.tsx
src/components/: BackupPairSettings.tsx  IntervalTimer.tsx  LeftMenu.tsx  ToolTip.tsx  validator.ts
src/restore/: page.tsx
src/settings/: page.tsx
src/store/: backup.ts  restore.ts  setting.ts  setting.tsx
